add enum value high-sensitive
